--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,30 @@
 .custom-bg-orange {
 	background-color: #f97316; /* Same as Tailwind's bg-orange-500 */
 }
+
+
+
+
+.custom-welcome-bg {
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+.custom-welcome-text {
+	color: white;
+}
+
+.custom-welcome-button {
+	color: #fb923c; /* Tailwind's text-orange-600 */
+	background: none;
+	border: none;
+	cursor: pointer;
+}
+
+.custom-welcome-button:hover {
+	color: white;
+}
+
+.custom-welcome-link {
+	color: inherit;
+	text-decoration: none;
+}
