--- a/src/index.css
+++ b/src/index.css
@@ -171,3 +171,25 @@
 .search-custom-ring-orange-300:focus {
   box-shadow: 0 0 0 4px rgba(253, 186, 116, 0.5);
 }
+
+
+
+
+
+.btn-mic-start {
+  background-color: #22c55e; /* green-500 */
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-mic-stop {
+  background-color: #ef4444; /* red-500 */
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  cursor: pointer;
+}
