--- a/src/index.css
+++ b/src/index.css
@@ -193,3 +193,26 @@
   border: none;
   cursor: pointer;
 }
+
+
+
+
+.refresh-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 18px;
+	width: 100%;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.1s;
+}
+
+.refresh-btn:hover {
+  background-color: #0056b3;
+}
+
+.refresh-btn:active {
+  transform: scale(0.95);
+}
